# LauncherKit

./: .gitignore  README.md  package.json  publish_to_s3.js
page/: index.html
public/: index.html
src/: App.js  AppHeader.js  AppNavbar.js  FriendList.js  Login.js  Main.js  UserMenu.js  index.css  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: useConfig.js  useUser.js  utils.js
~/.tauri/: myapp.key  myapp.key.pub
