[package]
authors = ["you"]
default-run = "open_game_launcher"
description = "A Tauri App"
edition = "2021"
license = ""
name = "open_game_launcher"
repository = ""
rust-version = "1.57"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "1.7"
tauri-build = {version = "1.2.1", features = [] }

[dependencies]
futures-util = "0.3.14"
read-progress-stream = "1.0.0"
reqwest = {version = "0.11.11", features = ["stream"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
single-instance = "0.3"
tauri = {version = "1.2.4", features = ["dialog-all", "fs-write-file", "global-shortcut-all", "http-all", "icon-ico", "icon-png", "path-all", "shell-execute", "shell-sidecar", "system-tray", "updater", "window-all"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tokio = {version = "1.17", features = ["fs"] }
tokio-util = {version = "0.7", features = ["codec"] }
async-process = "1.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
